starting search of second API
moved variables around
started new API search function using information from 1st search

--- a/index.html
+++ b/index.html
@@ -15,7 +15,25 @@
 		</form>
 		<div class="results-container">
 			<div class="search-results"></div>
-			<div class="results"></div>
+			<div class="results">
+				<ul class="food-list">
+				<li>
+				<a class="foodItem" data-id="11370" href="#">Potatoes, hash brown, home-prepared</a>
+				</li>
+				</ul>
+			</div>
+		</div>
+		<div class="nutritional information">
+			
+		</div>
+		<div class="hidden templates">
+			<ul class="nutrition list">
+				<li class="unit"></li>
+				<li class="cal"></li>
+				<li class="protien"></li>
+				<li class="fat"></li>
+				<li class="cabs"></li>
+			</ul>
 		</div>
 	</div>
 </body>
