fixed and added
moved functions to remove errors
console log nutrients for each food
updated index and css for information to be added to DOM

--- a/index.html
+++ b/index.html
@@ -27,12 +27,25 @@
 			
 		</div>
 		<div class="hidden templates">
-			<ul class="nutrition list">
-				<li class="unit"></li>
-				<li class="cal"></li>
-				<li class="protien"></li>
-				<li class="fat"></li>
-				<li class="cabs"></li>
+			<ul class="main list">
+				<li class="food"></li>
+				<li class="calories">Calories: </li>
+				<li class="protien">Protien: </li>
+				<li class="fat">Total fat: </li>
+				<li class="saturated">Saturated: </li>
+				<li class="carbohydrate">Total carbohydrates: </li>
+				<li class="fiber">Fiber: </li>
+				<li class="sugar">Sugar: </li>
+			</ul>
+			<ul class="secondary list">
+				<li class="water"></li>
+				<li class="monotfat"></li>
+				<li class="polyfat"></li>
+				<li class="calcium"></li>
+				<li class="iron"></li>
+				<li class="magnesium"></li>
+				<li class="potassium"></li>
+				<li class="sodium"></li>
 			</ul>
 		</div>
 	</div>
