--- a/index.html
+++ b/index.html
@@ -17,36 +17,48 @@
 			<div class="search-results"></div>
 			<div class="results">
 				<ul class="food-list">
-				<li>
-				<a class="foodItem" data-id="11370" href="#">Potatoes, hash brown, home-prepared</a>
-				</li>
+				<li><a class="foodItem" data-id="11370" href="#">Potatoes, hash brown, home-prepared</a></li>
+				<li><a class="foodItem" data-id="11370" href="#">Potatoes, hash brown, home-prepared</a></li>
+				<li><a class="foodItem" data-id="11370" href="#">Potatoes, hash brown, home-prepared</a></li>
 				</ul>
 			</div>
 		</div>
 		<div class="nutritional information">
-			
+			<div class="nutrition list">
+				<h2 class="food">Look for foods by putting a food name in the search bar above.</br>You can refine your search by putting extra tags afterwards separating them with a comma.</br>E.g. "potato, boiled" would only provide results for boiled potatoes</h2>
+				</div>
+			</div>
 		</div>
 		<div class="hidden templates">
-			<ul class="main list">
-				<li class="food"></li>
-				<li class="calories">Calories: </li>
-				<li class="protien">Protien: </li>
-				<li class="fat">Total fat: </li>
-				<li class="saturated">Saturated: </li>
-				<li class="carbohydrate">Total carbohydrates: </li>
-				<li class="fiber">Fiber: </li>
-				<li class="sugar">Sugar: </li>
-			</ul>
-			<ul class="secondary list">
-				<li class="water"></li>
-				<li class="monotfat"></li>
-				<li class="polyfat"></li>
-				<li class="calcium"></li>
-				<li class="iron"></li>
-				<li class="magnesium"></li>
-				<li class="potassium"></li>
-				<li class="sodium"></li>
-			</ul>
+			<div class="nutrition list">
+				<h2 class="food"></h2>
+				<div class="title column">
+					<h3>Nutritional</br>Information</h3>
+					<ul>
+						<li>Calories: </li>
+						<li>Protien: </li>
+						<li>Total fat: </li>
+						<li id="satfat">Saturated: </li>
+						<li>Net carbs: </li>
+						<li>Fiber: </li>
+						<li>Water: </li>
+						<li>Total: </li>
+					</ul>
+				</div>
+				<div class="info column">
+					<h3>Approximate</br>per 100g</h3>
+					<ul>
+						<li class="calories"></li>
+						<li class="protein"></li>
+						<li class="fat"></li>
+						<li class="saturated"></li>
+						<li class="carbohydrate"></li>
+						<li class="fiber"></li>
+						<li class="water"></li>
+						<li class="total"></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
