--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<div class="results">
 				<div class="instruction">
 					<p>Look for a food by putting a food name in the search bar above.</p>
-					<p>You can refine your search by putting extra information after the food name separating them with a comma.</p>
-					<p>E.g. "potato, boiled" would only provide results for boiled potatoes</p>
+					<p>You can refine your search by putting extra information separating your search items with a space</p>
+					<p>E.g. "fried egg" would only provide results for a fried egg</p>
 				</div>
 			</div>
 		</div>
@@ -35,11 +35,10 @@
 					<li>Calories</li>
 					<li>Protien</li>
 					<li>Total fat</li>
-					<li id="satfat" >Saturated</li>
+					<li id="satfat">Saturated</li>
 					<li>Net carbs</li>
 					<li>Fiber</li>
 					<li>Water</li>
-					<li>Total</li>
 				</ul>
 			</div>
 			<div class="info column">
@@ -52,13 +51,15 @@
 					<li class="carbohydrate"></li>
 					<li class="fiber"></li>
 					<li class="water"></li>
-					<li class="total"></li>
 				</ul>
 			</div>
 		</div>
+		<div class="error">
+			<p>Your search returned no results - please try a different search.</p>
+		</div>
 	</div>
 	<div class="attribution">
-		<a href="http://ndb.nal.usda.gov/ndb/api/doc">Search results and nutritional information source:</br>The National Nutrient Database for Standard Reference Release 27</a>
+		<a href="http://ndb.nal.usda.gov/ndb/api/doc">Search results and nutritional information sourced from</br>The National Nutrient Database for Standard Reference Release 27</a>
 	</div>
 </body>
 </html>
