--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 	<div class="container">
 		<form class="query" onsubmit="return false;">
-			<input type="text" placeholder='e.g. "potato, raw"' name="tags" autofocus required>
+			<input type="text" placeholder="Search for food items here" name="tags" autofocus required>
 			<input type="submit" value="Submit">
 		</form>
+		<header>Dan's Nutrition API Hack</header>
 		<div class="results-container">
-			<div class="search-results"></div>
 			<div class="results">
 				<div class="instruction">
 					<p>Look for a food by putting a food name in the search bar above.</p>
