--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Template</title>
+	<title>Nutrition API Hack</title>
 	<link rel="stylesheet" href="main.css">
 	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu|Montserrat' rel='stylesheet' type='text/css'>
