--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</div>
 	</div>
 	<div class="attribution">
-		<a href="http://ndb.nal.usda.gov/ndb/api/doc">Search results and nutritional information sourced from</br>The National Nutrient Database for Standard Reference Release 27</a>
+		<a href="http://ndb.nal.usda.gov/ndb/api/doc">Search results and nutritional information sourced from</br>The National Nutrient Database</br>for Standard Reference Release 27</a>
 	</div>
 </body>
 </html>
