--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<title>Nutrition API Hack</title>
 	<link rel="stylesheet" href="main.css">
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu|Montserrat' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" type="image/x-icon"  href="favicon.png">
 	<script src="app.js"></script>
+	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
 	<div class="container">
