--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu|Montserrat' rel='stylesheet' type='text/css'>
 	<link rel="shortcut icon" type="image/x-icon"  href="favicon.png">
 	<script src="app.js"></script>
-	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
 	<div class="container">
